css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0px;
    box-sizing: border-box;
}

html{
    scroll-behavior: smooth;
    font-family: 'Inter';
}

body{
    max-width: 1440px;
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
}

#hero_section{
    height: 840px;
    width: 100%;
}

.openat700 {
    display: none;
    visibility: hidden;
}

.navscreen{
    height: 100vh;
    background-color: #fff;
    padding-top: 60px;
    width: 100%;
    max-width: 100%;
    padding-left: 5.6%;
    padding-right: 5.6%;
    z-index: 50000;
    position: fixed;    
}

.screennavbar{
    display: flex;
    justify-content: space-between;
}

#hero_section .navbar{
    position: fixed;
    z-index: 5000;
    padding-left: 5.56%;
    padding-right: 5.56%;
    padding-top: 80px;
    display: flex;
    justify-content: space-between;
    width: 100vw;
}

.heroslideone{
    display: flex;
    flex-direction: row;
    background: url('../images/herosectionbackground.svg');
    color: #FBFBFF;
    position: relative;
}

.heroslidetwo{
    display: flex;
    flex-direction: row;
    background: url('../images/heroslidetwo.svg');
    color: #FBFBFF;
    position: relative;
}

.heroslidethree{
    display: flex;
    flex-direction: row;
    background: url('../images/heroslide3.svg');
    color: #FBFBFF;
    position: relative;
}

.heroslidefour{
    display: flex;
    flex-direction: row;
    background: url('../images/heroslide4.svg');
    color: #FBFBFF;
    position: relative;
}

.heroslidefive{
    display: flex;
    flex-direction: row;
    background: url('../images/heroslide5.svg');
    color: #FBFBFF;
    position: relative;
}

.bulletsstyle button div {
    display: flex;
    flex-direction: row;
}

.bulletsstyle button img{
    max-width: 120px;
    height: 33px;
}

.glide__bullet .const{
    color: #F2F2F2;
    opacity: 0.6000000238418579;
font-family: Jost;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 32px; /* 177.778% */
letter-spacing: -0.176px;
}

button.glide__bullet.glide__bullet--active .const{
    color: #FFF;
    opacity: 1;
font-family: Jost;
font-size: 18px;
font-style: normal;
font-weight: 500;
line-height: 32px; /* 177.778% */
letter-spacing: -0.176px;
}

button.glide__bullet.glide__bullet--active .thetoggled{
    display: inline;
    visibility: visible;
}

.glide__bullet .thetoggled{
    display: none;
    visibility: hidden;
}

.bulletsstyle button .thetoggled{
    margin-left: 6px;
    color: #FFF;
font-family: Jost;
font-size: 18px;
font-style: normal;
font-weight: 500;
line-height: 32px; /* 177.778% */
letter-spacing: -0.176px;
}



.bulletsstyle button{
    background-color: none;
    background: none;
    border: none;
}

.heroslidesix{
    display: flex;
    flex-direction: row;
    background: url('../images/heroslide6.svg');
    color: #FBFBFF;
    position: relative;
}

.bulletsstyle{
    position: absolute;
    bottom: 40px;
    right: 4.2%;
}

.heroleft{
    width: 52.7%;
    background: linear-gradient(144deg, #0F1417 0%, rgba(4, 6, 40, 0.85) 100%, #040628 100%);
opacity: 0.949999988079071;
    padding-left: 8.3%;
    padding-top: 21.1%;
    padding-right: 3.54%;
}



.bluecntbtn{
    position: absolute;
    right: 0;
    top: 244px;

}

.herotitle{
font-family: Jost;
font-size: 18px;
font-style: normal;
font-weight: 500;
line-height: normal;
}

#hero_section .content{
font-size: 20px;
font-style: normal;
font-weight: 400;
line-height: 32px;
letter-spacing: -0.196px;
}

#hero_section p{
    margin-bottom: 40px;
}

.learnmore{
border-radius: 4px;
background: #FFF;
width: 180px;
height: 60px;
display: flex;
justify-content: center;
align-items: center;
justify-items: center;

}

.learnmore p{
color: #040628;
font-family: Roboto;
font-size: 16px;
font-style: normal;
font-weight: 500;
line-height: 150%;
letter-spacing: -0.157px; 
align-items: center;
justify-items: center;
padding-top: 36px;
}

.bottomlinks{
    display: flex;
    flex-direction: row;
    position: absolute;
    bottom: 63px;
    width: 110px;
    justify-content: space-between;
}

.section{
    padding-left: 8.3%;
    padding-right: 8.3%;
    padding-top: 120px;
    box-sizing: border-box;
}

#whatwedo{
    display: flex;
    flex-direction: row;
    width: 100%;
}

.whatwedoleft{
    width: 50%;
    padding-right: 6.9%;
}

.ontopline{
    color: #293037;
font-family: Jost;
font-size: 16px;
font-style: normal;
font-weight: 500;
line-height: normal;
margin-bottom: 12px;
opacity: 0.8500000238418579;
}

#whatwedo .line{
    margin-bottom: 25.44px;
    max-width: 100%;
}

.moredetail{
    color: #293037;
font-family: Inter;
font-size: 20px;
font-style: normal;
font-weight: 600;
line-height: 28px;
letter-spacing: -0.196px;
margin-bottom: 25px;
max-width: 443px;
}

.boldcatch{
    color: #121314;
font-family: Inter;
font-size: 64px;
font-style: normal;
font-weight: 700;
line-height: 76px;
letter-spacing: -0.627px;
max-width: 359px;
}

.whatwedoright{
    display: flex;
    flex-direction: column;
    width: 50%;
    padding-bottom: 170px;
}

.whatwedoright .righttop{
    display: flex;
    flex-direction: row;
    padding-bottom: 80px;
    width: 100%;
}

.whatwedoright .rightbottom{
    display: flex;
    flex-direction: row;
}
.research{
    color: #121314;
font-family: Inter;
font-size: 24px;
font-style: normal;
font-weight: 600;
line-height: 30px;
letter-spacing: -0.235px;
margin-bottom: 25px;
}

.whatwedoright .aside{
    width: 50%;
    padding-right: 15px;
}

.whatwedoright .cside{
    max-width: 50%;
    margin-right: 15px;
}

.whatwedoright .bside{
    max-width: 50%;
}

#whatwedo .whatwedoright .line{
    width: 100%;
    max-width: 286px;
    height: 0.56px;
}
/* ... */

